--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -232,3 +233,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,windows
+
+# Source:
+# https://www.kaggle.com/datasets/tgdivy/poetry-foundation-poems/data
+PoetryFoundationData.csv
